FISH-7845 add --add-opens in test, required for jdk 21